Updated index.html, script.js, style.css, cards.json

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Pocket Simulator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/pokeball-favicon.ico" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -17,6 +18,9 @@
             </button>
             <button id="pikachu-button">
                 <img src="images/genetic-apex-pikachu-logo.png" alt="Pikachu">
+            </button>
+            <button id="mythical-button">
+                <img src="images/LOGO_expansion_A1a_en_US.webp" alt="Mythical">
             </button>
         </div>
         <div id="card-display">
